2008-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-safe-url-regexp): Add note to doc string.
	(w3m-fontify): Hold the value of w3m-safe-url-regexp with the
	w3m-safe-url-regexp text-property.
	(w3m-toggle-inline-image, w3m-toggle-inline-images)
	(w3m-safe-view-this-url, w3m-mouse-safe-view-this-url): Check whether
	url is safe by comparing it with the value of the w3m-safe-url-regexp
	text property; prompt a user to confirm whether to proceed.
	(w3m-safe-toggle-inline-image, w3m-safe-toggle-inline-images): Abolish.
	(w3m-minor-mode-command-alist): Map w3m-toggle-inline-image and
	w3m-toggle-inline-images to themselves.

2008-01-20  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-search-name-anchor): Accept and optional argument
	`no-record'.
	(w3m-goto-url): Going other page's anchor, call
	`w3m-search-name-anchor' with 3rd argument t.

2008-01-16  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-input-textarea-coding-system): Revert.
	(w3m-form-input-textarea): Set w3m-form-input-textarea-coding-system to
	use in w3m-form-coding-system-accept-region-p.

2008-01-15  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-textarea-file-coding-system): New variable.
	(w3m-form-input-textarea-save): Use it.
	(w3m-form-input-textarea): Ditto.
	(w3m-form-input-textarea-coding-system): Abolish.

2008-01-11  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-filter.el (w3m-filter-iframe): New function.
	(w3m-filter-rules): Add rule for inserting link to the url iframe
	displays.

2008-01-09  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-coding-system-accept-region-p): Abolish.

	* w3m-ems.el (w3m-form-coding-system-accept-region-p): Use
	select-safe-coding-system if unencodable-char-position is not
	available.

	* w3m-xmas.el (w3m-form-coding-system-accept-region-p): Use
	decode-coding-string and encode-coding-string instead of
	unencodable-char-position; Only warn coding-system problem.
